#71: Various minor corrections to usage of Reflection API, spelling & naming.